<resources>
    <string name="app_name">DemoRetrofit</string>
    <string name="title_activity_home">HomeActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="email">Email Address</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="cancel">Cancel</string>
    <string name="create_task">Create Task</string>
    <string name="task_detail">Task Details</string>
    <string name="tasks">Tasks</string>
    <string name="status">status</string>
    <string name="date">date</string>
    <string name="edit">Edit</string>
    <string name="task">Task</string>
    <string name="update_task">Update Task</string>
    <string name="name">Name</string>
    <string name="phone">Phone No</string>
    <string name="select_request_type">Select request type from the navigation drawer</string>
    <string name="delete">Delete</string>
    <string name="remember_me">Remember Me</string>
    <string name="upload">Upload</string>
    <string name="select_image">Select Image</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <array name="status">
        <item>Select Status</item>
        <item>Pending</item>
        <item>In progress</item>
        <item>Failed</item>
        <item>Completd</item>
    </array>


</resources>
