<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.amitrai.demoretrofit.ui.fragment.LoginFragment">

    <android.support.v7.widget.CardView
        android:layout_gravity="center"
        android:layout_margin="50dp"
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="2dp">

        <LinearLayout
            android:padding="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/edt_email"
                android:inputType="textEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionNext"
                android:maxLines="1"
                android:hint="@string/email"/>
            <EditText
                android:id="@+id/edt_password"
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:imeOptions="actionDone"
                android:hint="@string/password"/>
            <android.support.v7.widget.AppCompatCheckBox
                android:id="@+id/remember_me"
                android:layout_margin="3dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/remember_me"/>

            <Button
                android:id="@+id/btn_login"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login"/>


            <Button
                android:id="@+id/btn_register"
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/register"/>


        </LinearLayout>
    </android.support.v7.widget.CardView>

</FrameLayout>
