<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.v7.widget.CardView
        android:id="@+id/card_view"
        android:layout_margin="5dp"
        android:elevation="3dp"
        android:layout_width="match_parent"
        android:layout_height="140dp">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">



            <TextView
                android:id="@+id/txt_task"
                android:text="@string/tasks"
                android:layout_centerInParent="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:layout_alignParentBottom="true"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">



                <RelativeLayout
                    android:id="@+id/layout_parent"
                    android:padding="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:id="@+id/txt_date"
                        android:textSize="10dp"
                        android:text="@string/date"
                        android:layout_alignParentLeft="true"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                    <TextView
                        android:id="@+id/txt_status"
                        android:textSize="10dp"
                        android:text="@string/status"
                        android:layout_alignParentRight="true"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                </RelativeLayout>
                <TextView
                    android:id="@+id/txt_edit"
                    android:textColor="@color/white"
                    android:background="@color/colorPrimary"
                    android:textSize="10dp"
                    android:gravity="center"
                    android:layout_alignParentBottom="true"
                    android:text="@string/edit"
                    android:padding="5dp"
                    android:visibility="gone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>



        </RelativeLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>