<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.amitrai.demoretrofit.ui.fragment.CreateTaskFragment">

    <android.support.v7.widget.CardView
        android:layout_gravity="center"
        android:layout_margin="50dp"
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="2dp">

        <LinearLayout
            android:padding="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/edt_create_task"
                android:inputType="textEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:imeOptions="actionNext"
                android:maxLines="10"
                android:hint="@string/task_detail"/>

            <android.support.v7.widget.AppCompatSpinner
                android:id="@+id/spinner_status"
                android:entries="@array/status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <Button
                android:id="@+id/btn_create_task"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/create_task"/>


            <Button
                android:id="@+id/btn_cancel"
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cancel"/>

        </LinearLayout>
    </android.support.v7.widget.CardView>

</FrameLayout>
